--- a/src/styles.css
+++ b/src/styles.css
@@ -130,3 +130,64 @@ footer{
     height: 50%;
     width: 50%;
 }
+
+/* TIME LINE VIEW */
+#timeLineDive{
+    display: flex;
+    flex-direction: column;
+}
+
+#postContainer{
+    display: flex;
+    flex-direction: column;
+    margin-left: 10%;
+    margin-right: 10%;
+    
+}
+
+#logOutAct{
+    background-color: #FF7C7C;
+    font-weight: bolder;
+    border: transparent;
+    border-radius: 30px;
+    color: white;
+    width:25%;
+    /* padding:5%; */
+}
+
+#newPost{
+    border: 2px solid #FFBE48;
+    border-radius: 10px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+#postButton{
+    background-color: #FFBE48;
+    border: transparent;
+    border-radius: 30px;
+    color:black;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 2%;
+    width: 30%;
+    align-self: center;
+    
+}
+
+article{
+    border: 2px solid #FFBE48;
+    border-radius: 10px;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding: 2%;
+}
+
+#logo_hex{
+    display: flex;
+    align-self: start;
+    height: 20%;
+    width: 20%;
+}
