--- a/src/styles.css
+++ b/src/styles.css
@@ -135,6 +135,27 @@ footer{
 #timeLineDive{
     display: flex;
     flex-direction: column;
+    margin-bottom: 10%;
+}
+header{
+    display: flex;
+    flex-direction: row;
+    margin-top: 3%;
+    justify-content: space-around;
+    align-content: center;
+}
+#profile{
+    height: 10%;
+    width: 10%;
+    cursor: pointer;
+}
+#logo_hexagonal2{    
+    height: 15%;
+    width: 15%;
+}
+#inbox{
+    height: 10%;
+    width: 10%;
 }
 
 #postContainer{
@@ -190,4 +211,24 @@ article{
     align-self: start;
     height: 20%;
     width: 20%;
+}
+
+#mainFooter{
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    position: fixed;
+    background-color: #FF7C7C;
+    background-attachment: fixed;
+    bottom: 0%;
+}
+#homeFooter{
+    height: 10%;
+    width: 13%;
+}
+#searchFooter{
+    height: 10%;
+    width: 10%;
+    align-self: center;
+    
 }
