--- a/src/styles.css
+++ b/src/styles.css
@@ -72,6 +72,11 @@ h1{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+#showPass{
+    height: 5%;
+    width: 5%;
+    cursor: pointer;
+}
 #containerLogos{
     display: flex;
     flex-direction: row;
@@ -164,6 +169,14 @@ header{
     margin-left: 10%;
     margin-right: 10%;
     
+}
+#likeDiv{
+    display: flex;
+    justify-content: center;
+}
+#likeB{
+    height: 10%;
+    width: 10%;
 }
 
 #logOutAct{
