edit, remove and likes

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 *{
     font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
-    margin: 0;
+    margin: auto;
     padding: 0;
+    margin-top: 2%;
 }
 body{
     background-color: white;
@@ -37,13 +38,10 @@ h1{
     row-gap: 10px;
     margin: 5%;
 }
-.loggedOut{
-    background-color: aqua;
-}
 .mailAndPass{
     background-color: #E4E3E3;
     border-radius: 30px;
-    width:120%;
+    width:85%;
     padding: 3%;
     border-color:#FFBE48;
     text-align: center;
@@ -55,9 +53,9 @@ h1{
     border: transparent;
     border-radius: 30px;
     color: whitesmoke;
-    width:95%;
+    width:85%;
     padding:5%;
-    margin-top: 10%;
+    margin-top: 5%;
 }
 #acc_creation{
     flex-direction: row;
@@ -79,6 +77,7 @@ h1{
     height: 5%;
     width: 5%;
     cursor: pointer;
+    border: pink solid;
 }
 #containerLogos{
     display: flex;
@@ -138,7 +137,6 @@ footer{
     height: 50%;
     width: 50%;
 }
-
 /* TIME LINE VIEW */
 #timeLineDive{
     display: flex;
@@ -165,31 +163,91 @@ header{
     height: 10%;
     width: 10%;
 }
-
 #postContainer{
     display: flex;
     flex-direction: column;
     margin-left: 10%;
     margin-right: 10%;
-    
+}
+#inputSection{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+#likeContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 #likeDiv{
     display: flex;
     justify-content: center;
+    align-self: center;
 }
-#likeB{
-    height: 10%;
-    width: 10%;
+#likeCount{
+    font-weight: bolder;
+    margin-right: 0;
+}
+.patas{
+    height: 30%;
+    width: 30%;
 }
 #editSection{
     display: flex;
     justify-content: space-evenly;
 }
-#editB{
-    height: 10%;
-    width: 10%;
+#dislikeB{
+    margin-left: 2%;    
 }
+#likeB{
+    margin-left: 2%;    
+}
+#editB{
+    
+}
+#editConteiner{
+    display: flex;
+    justify-content: center;
+    align-content: center;
 
+}
+#saveEdit{
+    display: flex;
+    background-color: #FF7C7C;
+    height: 20%;
+    width: 20%;
+    border-radius: 5px;
+    padding-top: 0%;
+    padding-bottom: 0%;
+    padding-left: 3%;
+    padding-right: 4%;
+    justify-content: center;
+}
+#eraseSection{
+    display: flex;
+    justify-content: space-evenly;
+}
+#warning{
+    border: solid, #FFBE48, 2px;
+    font-weight: bolder;
+    font-style: italic;
+}
+#yesNoSection{
+    display: flex;
+    justify-content: space-around;
+}
+#yesB{
+    border-radius: 5px;
+    background-color: #FF7C7C;
+    padding: 0 3% 0 3%;
+    margin-bottom: 1%;
+}
+#noB{
+    border-radius: 5px;
+    background-color: #FFBE48;
+    padding: 0 1% 0 1%;
+    margin-bottom: 1%;
+}
 #logOutAct{
     background-color: #FF7C7C;
     font-weight: bolder;
@@ -199,44 +257,37 @@ header{
     width:25%;
     /* padding:5%; */
 }
-
 #newPost{
     border: 2px solid #FFBE48;
     border-radius: 10px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 8%;
+    margin-right: 8%;
 }
-
 #postButton{
     background-color: #FFBE48;
     border: transparent;
     border-radius: 30px;
     color:black;
-    margin-left: 10%;
+    margin-left: 33%;
     margin-right: 10%;
     margin-top: 2%;
     width: 30%;
-    align-self: center;
-    
 }
-
 article{
     border: 2px solid #FFBE48;
     border-radius: 10px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-top: 5%;
     margin-bottom: 5%;
-    padding: 2%;
+    /* padding: 2%; */
 }
-
 #logo_hex{
     display: flex;
     align-self: start;
     height: 20%;
     width: 20%;
 }
-
 #mainFooter{
     display: flex;
     justify-content: space-evenly;
@@ -256,6 +307,5 @@ article{
     align-self: center;
 }
 #saveEdit{
-    height: 10%;
-    width: 10%;
+
 }
