--- a/src/styles.css
+++ b/src/styles.css
@@ -202,9 +202,9 @@ header{
 #likeB{
     margin-left: 2%;    
 }
-#editB{
+/* #editB{
     
-}
+} */
 #editConteiner{
     display: flex;
     justify-content: center;
@@ -306,6 +306,6 @@ article{
     width: 10%;
     align-self: center;
 }
-#saveEdit{
+/* #saveEdit{
 
-}
+} */
